--- a/app/src/main/res/drawable/controllarrow.xml
+++ b/app/src/main/res/drawable/controllarrow.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="16">
   <path
       android:pathData="M8.402,1.512L2.14,8.014L8.402,14.515L7.519,15.402L0.375,8.014L7.519,0.625L8.402,1.512Z"
-      android:fillColor="#1F1F1F"/>
+      android:fillColor="#FFFF"/>
 </vector>
